// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a BannerShimmer component with minHeight 1`] = `
<div
  aria-busy="true"
  aria-live="polite"
  className="root_rectangle"
  style={
    Object {
      "marginBottom": undefined,
      "marginLeft": undefined,
      "marginRight": undefined,
      "marginTop": undefined,
    }
  }
>
  <div
    className="wrapper"
    style={
      Object {
        "border": undefined,
        "borderWidth": undefined,
        "minHeight": "400px",
        "paddingBottom": undefined,
        "paddingLeft": undefined,
        "paddingRight": undefined,
        "paddingTop": undefined,
      }
    }
  >
    <div
      className="overlay"
    >
      <div
        className="content"
      />
    </div>
  </div>
</div>
`;

exports[`renders an empty BannerShimmer component 1`] = `
<div
  aria-busy="true"
  aria-live="polite"
  className="root_rectangle"
  style={
    Object {
      "marginBottom": undefined,
      "marginLeft": undefined,
      "marginRight": undefined,
      "marginTop": undefined,
    }
  }
>
  <div
    className="wrapper"
    style={
      Object {
        "border": undefined,
        "borderWidth": undefined,
        "minHeight": undefined,
        "paddingBottom": undefined,
        "paddingLeft": undefined,
        "paddingRight": undefined,
        "paddingTop": undefined,
      }
    }
  >
    <div
      className="overlay"
    >
      <div
        className="content"
      />
    </div>
  </div>
</div>
`;
